@@ -1,3 +1,4 @@
 [gui]
 plt-export=Export personal logistics template
 plt-import=Import personal logistics template
+plt-append=Append personal logistics template
