@@ -18,5 +18,13 @@ data:extend{
         size = 32,
         mipmap_count = 2,
         flags = {"icon"}
+    },
+    {
+        type = "sprite",
+        name = "plt-append-template-button",
+        filename = "__personal-logistics-templates__/graphics/icons/append-template-button.png",
+        size = 32,
+        mipmap_count = 2,
+        flags = {"icon"}
     }
 }
